--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ plugins:
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
-paginate_path: /page:num/
+paginate_path: "/posts/page:num/"
 timezone: Europe/Paris
 
 # include:
