Add spring22 retrospective article

--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ analytics:
 
 # Site Author
 author:
-  name: "Thomas Delame"
+  name: "Tom Delame"
   avatar:  /assets/medial/avatar.jpg
   bio: "R&D software engineer in Computer Graphics in Paris area, code lover, video game addict. I code game AI for fun."
   location: "Paris area"
