Change email address

--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ footer:
   links:
     - label: "Email"
       icon: "far fa-envelope"
-      url: "mailto:admin@virtual-atom.com"
+      url: "mailto:tdelame@gmail.com"
     - label: "Twitter"
       icon: "fab fa-twitter"
       url: "https://twitter.com/AtomDelame"
